# PuzzleWithSFML

./: .gitignore  CMakeLists.txt  readme.md
Code/Headers/: Board.h  Piece.h
Code/Sources/: Board.cpp  Piece.cpp  main.cpp
Resources/: setup.txt
